# vorti2d

./: .gitignore  Makefile  README.md  TODO.md  build.sh  pyproject.toml  setup.py
docs/: Makefile  README.md  api.rst  architecture.rst  citation.rst  citations.bib  conf.py  index.rst  install.rst  introduction.rst  make.bat  meshing.rst  parallel.rst  requirements.txt  theory.rst  tutorial.rst  verification.rst
examples/: airfoil_unsteady.py  cylinder_dns.py  cylinder_unsteady.py  lco_frequency.py  plot_cl.py  scaling_bench.py  strouhal.py  validation_strouhal.py
pyHypMesh/: .gitignore  README.md  cgns_to_vorti2d.py  gen_ogrid.py  oat15a_sample_L0.cgns
src/fortran/: vorti2d_core.f90  vorti2d_prec.f90
tests/: check_parallel.py  test_assemble_local.py  test_distributed.py  test_metrics_local.py  test_postproc.py  test_restart.py  test_smoke.py
tools/: check_requirements.py  gpu_scaling.sh  plot_scaling.py  scaling_data.csv
vorti2d/: __init__.py  cli.py  config.py  dist_solver.py  domain.py  fields_io.py  forces.py  mesh.py  petsc_solver.py  postprocess.py  restart.py  solver.py  velocity.py  viz_io.py
